--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,4 +1,3 @@
-
 # Colors (Gruvbox dark)
 colors:
   # Default colors
@@ -8,6 +7,7 @@ colors:
     # soft contrast: background = '#32302f'
     foreground: '#ebdbb2'
 
+  # Script test
   # Normal colors
   normal:
     black:   '#282828'
@@ -30,3 +30,52 @@ colors:
     cyan:    '#8ec07c'
     white:   '#ebdbb2'
 
+      # Font configuration
+font:
+  # Normal (roman) font face
+  normal:
+    # Font family
+    #
+    # Default:
+    #   - (macOS) Menlo
+    #   - (Linux/BSD) monospace
+
+    # The `style` can be specified to pick a specific face.
+    style: Regular
+
+  # Bold font face
+
+  # Point size
+  size: 14.0
+
+  # Offset is the extra space around each character. `offset.y` can be thought of
+  # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
+  offset:
+    x: 1
+    y: 1
+
+  # Glyph offset determines the locations of the glyphs within their cells with
+  # the default being at the bottom. Increasing `x` moves the glyph to the right,
+  # increasing `y` moves the glyph upwards.
+  #glyph_offset:
+  #  x: 0
+  #  y: 0
+
+  # Thin stroke font rendering (macOS only)
+  #
+  # Thin strokes are suitable for retina displays, but for non-retina screens
+  # it is recommended to set `use_thin_strokes` to `false`
+  #
+  # macOS >= 10.14.x:
+  #
+  # If the font quality on non-retina display looks bad then set
+  # `use_thin_strokes` to `true` and enable font smoothing by running the
+  # following command:
+  #   `defaults write -g CGFontRenderingFontSmoothingDisabled -bool NO`
+  #
+  # This is a global setting and will require a log out or restart to take
+  # effect.
+  #use_thin_strokes: true
+
+# If `true`, bold text is drawn using the bright color variants.
+#draw_bold_text_with_bright_colors: true
