--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,6 +6,7 @@ set -g default-terminal screen-256color
 
 # Mouse mode
 # This can get funky sometimes with older versions of linux
+# This is a small change in order to confirm a script is working
 
 setw -g mouse on
 
