--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,7 +6,7 @@ set -g default-terminal screen-256color
 
 # Mouse mode
 # This can get funky sometimes with older versions of linux
-# This is a small change in order to confirm a script is working
+# This line confirms that I have a working push script for all configs with marked stages using sleep and echo
 
 setw -g mouse on
 
