--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,7 +23,24 @@ bind-key v split-window -v
 bind-key h split-window -h
 
 # Easy config reload
+
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reload."
 
+# Set Plugins
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'dracula/tmux'
+set -g @dracula-show-powerline true
+set -g @dracula-fixed-location "Toronto"
+set -g @dracula-plugins "weather"
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-c true
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon session
+set -g status-position bottom
+
+# initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
 
