--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,36 +1,57 @@
 # Custom TMUX setup
 
 # Universal configs
-
 set -g default-terminal screen-256color
 
 # Mouse mode
-# This can get funky sometimes with older versions of linux
+# Enable mouse support within TMUX
+# Note: Mouse support may behave inconsistently in older versions of Linux
 # This line confirms that I have a working push script for all configs with marked stages using sleep and echo
-
 setw -g mouse on
 
-# Use Alt-arrow keys to switch panes\
-
+# Use Alt-arrow keys to switch panes
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-UP select-pane -U
 bind -n M-Down select-pane -D
 
 # Set easier window split keys
-
+# Use 'v' to split windows vertically and 'h' to split windows horizontally
 bind-key v split-window -v
 bind-key h split-window -h
 
 # Easy config reload
-
+# Press 'r' to reload the TMUX configuration file
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reload."
 
 # Set Plugins
 
+# Plugin Manager: TPM (Tmux Plugin Manager)
+# TPM allows easy management of TMUX plugins
+
+# To install TPM, follow these steps:
+# 1. Clone the TPM repository into the ~/.tmux/plugins directory:
+#    git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+# 2. Add the following line at the bottom of your ~/.tmux.conf file:
+#    run-shell '~/.tmux/plugins/tpm/tpm'
+
+# Once TPM is installed and configured, you can manage plugins by adding or removing them from the @plugin list below.
+
 set -g @plugin 'tmux-plugins/tpm'
+
+# Plugin: vim-tmux-navigator
+# Allows seamless navigation between Vim and TMUX panes using common keybindings
 set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# Plugin: dracula/tmux
+# Dracula theme for TMUX
 set -g @plugin 'dracula/tmux'
+
+# Plugin: resurrect
+# Allows automatic saving and restoring of TMUX sessions
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Dracula theme settings
 set -g @dracula-show-powerline true
 set -g @dracula-fixed-location "Toronto"
 set -g @dracula-plugins "weather"
@@ -38,9 +59,11 @@ set -g @dracula-show-fahrenheit false
 set -g @dracula-show-c true
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon session
+
+# Status bar position
+# Set the status bar position to bottom
 set -g status-position bottom
 
-# initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
-
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Run the TPM initialization script to load and manage plugins
+run-shell '~/.tmux/plugins/tpm/tpm'
